# ai-resume-harness

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  SPEC.md  applywise_add_job_ai_intake_flow_user_stories.md  package-lock.json  package.json
apps/api/: README.md  pyproject.toml
apps/api/app/: auth.py  main.py  settings.py
apps/api/app/routers/: activities.py  dashboard.py  draft_cvs.py  health.py  interview_prep.py  jobs.py  matches.py  profile.py  resume_suggestions.py  resumes.py
apps/api/tests/: ai_fakes.py  test_activities_router.py  test_activity_description.py  test_ai_role_relevance.py  test_ai_workflow_foundation.py  test_ai_workflow_panel.py  test_analysis_history_router.py  test_analysis_package_router.py  test_assistant_insight_workflow.py  test_auth.py  test_candidate_profile.py  test_cover_letter_workflow.py  test_dashboard_summary.py  test_decision_engine.py  test_draft_cv_compression.py  test_draft_cv_edit.py  test_draft_cv_export.py  test_draft_cv_fonts.py  test_draft_cv_router.py  test_draft_cv_workflow.py  test_interview_prep_workflow.py  test_job_search.py  test_jobs.py  test_jobs_preview.py  test_jobs_quick_match_router.py  test_jobs_save_external.py  test_learning_target_relevance.py  test_match_analysis_workflow.py  test_missing_skills_workflow.py  test_model_routing.py  test_page_policy.py  test_provider_switch.py  test_quick_match_workflow.py  test_refresh_analysis.py  test_resume_draft_workflow.py  test_resume_suggestions_workflow.py  test_resumes.py  test_roadmap_workflow.py  test_run_reuse.py  test_search_enricher.py  (+1 more)
(+636 files in other folders)
