[project]
name = "applywise-api"
version = "0.1.0"
description = "FastAPI backend for ApplyWise resume import and AI workflows."
requires-python = ">=3.11"
dependencies = [
  "docling>=2.0.0",
  "fastapi>=0.115.0",
  "fpdf2>=2.7.0",
  "google-genai>=1.0.0",
  "httpx>=0.27.0",
  "python-docx>=1.1.0",
  "PyJWT[crypto]>=2.10.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pypdf>=4.0.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
